package com.example.myapplication;

public class GameConst {
    public  final  static int win = 14;

    public final static int Host = 0;
    public  final  static int Other = 1;
    public  final static  int one_phone = 1;
    public  final static  int two_phone = 2;
    public  final  static String game_confing = "GameConfiguration";

}
